--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ management.info.git.mode=full
 management.endpoint.health.show-details=always
 spring.profiles.active=prod
 appname=${spring.application.name}
+logging.pattern.level=DEBUG
